syntax = "proto3";

package proto;

option go_package = "gen/proto";


message ProductRequest {
  repeated string product_ids = 1; //slice of product_ids
}
// Message representing a single product.
message Product {
  string product_id = 1;
  int32 stock = 2;
  string price_id = 3;
  int32 price = 4;
}

// Message representing a list of products.
message ProductResponse {
  repeated Product products = 1;
}

service ProductService {
  //unary
  rpc GetProductInfo(ProductRequest) returns (ProductResponse);
}
